--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,14 +8,14 @@
 	<title>Node chat</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="ressources/css/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.min.js"
 		integrity="sha512-N5JbZMETkl+0SZh5l8OA2VxSfF120owfQyy54iAXTJIKuqAn3A9TrNz1ypB55o8aSU5MxaodEgv74wGUvgUynQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script type="text/javascript" src="main.js" defer></script>
+	<script type="text/javascript" src="ressources/js/main.js" defer></script>
 </head>
 
-<body>
+<body id="body">
 	<!---
     HTML/CSS implementation of HipChat redesign
     Source: https://codepen.io/CucuIonel/pen/HzLtC
@@ -52,7 +52,7 @@
 						<i class="fa fa-circle online"></i>
 					</div>
 					<div class="name">
-						<span>John Doe</span>
+						<span id="myname"></span>
 						<i class="fa fa-angle-down"></i>
 						<span class="availability">Available</span>
 					</div>
@@ -63,32 +63,14 @@
 				<div class="title"><b>Conversation title</b><i class="fa fa-search"></i></div>
 				<div class="chat-list">
 					<ul>
-						<li class="me">
-							<div class="name">
-								<span class="">John Doe</span>
-							</div>
-							<div class="message">
-								<p>Hello</p>
-								<span class="msg-time">5:00 pm</span>
-							</div>
-						</li>
-						<li class="">
-							<div class="name">
-								<span class="">Christian Smith</span>
-							</div>
-							<div class="message">
-								<p>World</p>
-								<span class="msg-time">5:01 pm</span>
-							</div>
-						</li>
+						
 					</ul>
 				</div>
 				<div class="input-area">
 					<div class="input-wrapper">
-						<input type="text" value="" placeholder="Message here">
-						<i class="fa fa-smile-o"></i>
+						<input id="textBarInput" type="text" value="" placeholder="Message here">
 					</div>
-					<input type="button" value="Submit" class="send-btn">
+					<input id="submitButton" type="button" value="Submit" class="send-btn">
 				</div>
 			</div>
 			<div class="right-tabs">
@@ -101,11 +83,10 @@
 				</ul>
 				<ul class="tabs-container">
 					<li class="active">
-						<ul class="member-list">
-							<li><span class="status online"><i class="fa fa-circle-o"></i></span><span>John Doe</span>
-							</li>
-							<li><span class="status online"><i class="fa fa-circle-o"></i></span><span>Christian
-									Smith</span></li>
+						<ul class="member-list" id="member-list">
+						</ul>
+						<ul class="member-list" style="margin-top: 5px;">
+							<span id="nbTotalMessage"></span>
 						</ul>
 					</li>
 					<li></li>
